# VHDLproc

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  PKGBUILD  README  README.ja  README.md  aclocal.m4  config.h.in  configure  configure.ac  setup.py
python/: vhdlproc
src/: Makefile  Makefile.am  Makefile.in  list.h  main.c  string.c  vhdlproc  vpp.c  vpp.h
src/taka/: string.c  string.h
tests/: and.vhdl  comment.vhdl  define.vhdl  for.vhdl  include-to.vhdl  include.vhdl  message.vhdl  nest.vhdl  rand.vhdl  replace.vhdl  test.vhdl  undef.vhdl
vhdlproc/: __init__.py  infix.py  test.py  vhdlproc.py
vhdlproc/tests/: and.vhdl  include.vhdl  nest.vhdl  test.vhdl  version.vhdl
